kube/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /content
        backend:
          serviceName: content-service-external
          servicePort: 80
      - path: /login
        backend:
          serviceName: auth-service-external
          servicePort: 80
